--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -1,5 +1,5 @@
 {
   "name": "worker-name",
-  "compatibility_date": "2025-06-19",
-  "main": "src/index.ts"
+  "main": "worker.js",
+  "compatibility_date": "2025-06-19"
 }
