--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -1,5 +1,6 @@
 {
   "name": "cfworker",
   "main": "worker_esm.js",
-  "compatibility_date": "2025-06-19"
+  "compatibility_date": "2025-06-19",
+  "modules": true
 }
